# agimus-vision

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: Tracker.cfg
data/: tMj_left_hand.pickle  tMj_right_hand.pickle
doc/: Doxyfile.extra.in  main-page.hpp
include/: node.hpp
include/agimus_vision/extrinsic_calibration/: extrinsic_calibration.hpp  node.hpp
include/agimus_vision/tracker_object/: detector.hpp  detector_apriltag.hpp  detector_chessboard.hpp  fwd.hpp  node.hpp  tracker.hpp
include/common/: common.hpp
include/extrinsic_calibration/: node.hpp
include/tracker_object/: detector.hpp  detector_apriltag.hpp  detector_chessboard.hpp  node.hpp
launch/: tag_tracker_kinect.launch  tag_tracker_realsense_ros.launch  tag_tracker_talos.launch  tag_tracker_tiago.launch  usb_cam.launch
msg/: AprilTag.msg  ImageDetectionResult.msg
objects/: euclidBox.cao  euclidBox.init
scripts/: april-tag-template.dae  april-tag-to-dae.py  calibrate_real_joint.py  publish_real_joint.py  simulate.py
src/: CMakeLists.txt  python.cpp
src/extrinsic_calibration/: CMakeLists.txt  extrinsic_calibration.cpp  main.cpp  node.cpp
src/tracker_box/: CMakeLists.txt  main.cpp  node.cpp
src/tracker_object/: CMakeLists.txt  detector.cpp  detector_apriltag.cpp  detector_chessboard.cpp  main.cpp  node.cpp  tracker.cpp
srv/: AddAprilTagService.srv  AddObjectTracking.srv  SetChessboardService.srv
tests/: CMakeLists.txt  FindV4L2.cmake  add_object_tracking.yaml  box.blend  box.cao  mbt-config.xml  tracker-apriltag.cpp  webcam.xml
