<?xml version="1.0"?>
<package format="2">
  <name>agimus_vision</name>
  <version>1.0.1</version>
  <description>The agimus_vision package</description>
  <maintainer email="anicolin@laas.fr">Alexis Nicolin</maintainer>
  <license>BSD-2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>visp</build_depend>
  <build_depend>xml2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visp_bridge</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <depend>dynamic_reconfigure</depend>

</package>
